updates to swagger.json
