# routes/index.js
@@ -29,9 +29,9 @@ router.post('/books',
           $book_author: 'Author Name',
           $book_genre: 'Genre',
           $book_summary: 'Add a summary for the book',
-          $book_published: 'Enter the year of piblication',
+          $book_published: 'Enter the year of publication',
           $book_isbn: 'Enter the ISBN number',
-          $book_pages: 000
+          $book_pages: 100
       }
   } */
   books.create);
@@ -53,7 +53,7 @@ router.put('/books/:book_id',
           $book_author: 'Updated Author',
           $book_genre: 'Updated Genre',
           $book_summary: 'Updated summary for the book.',
-          $book_published: '2025',
+          $book_published: 2025,
           $book_isbn: 'updatedisbn123456',
           $book_pages: 600
       }
@@ -85,10 +85,10 @@ router.post('/authors',
       schema: {
           $author_first_name: 'John',
           $author_last_name: 'Doe',
-          $author_birthdate: '1980',
+          $author_birthdate: '1980-01-01',
           $author_nationality: 'American',
           $author_awards: ['Best Author 2020'],
-          $author_books: ['John Doe\'s Book'], 
+          $author_books: ['Book Ids'], 
           $author_genres: ['Fiction', 'Mystery']
       }
   } */
@@ -109,7 +109,7 @@ router.put('/authors/:author_id',
       schema: {
           $author_first_name: 'Updated First Name',
           $author_last_name: 'Updated Last Name',
-          $author_birthdate: '1985',
+          $author_birthdate: '1985-01-01',
           $author_nationality: 'British',
           $author_awards: ['Best Author 2021'],
           $author_books: ['Updated Book Name'], 
@@ -118,19 +118,21 @@ router.put('/authors/:author_id',
   } */
   authors.updateAuthor);
 
-  router.delete('/authors/:author_id',
-    /* #swagger.tags=["Authors"] */
-    /* #swagger.parameters['author_id'] = { description: 'ID of the author to delete', type: 'string' } */
-    authors.deleteAuthor);
+router.delete('/authors/:author_id',
+  /* #swagger.tags=["Authors"] */
+  /* #swagger.parameters['author_id'] = { description: 'ID of the author to delete', type: 'string' } */
+  authors.deleteAuthor);
 
 // User Routes
 router.get('/users',
   /* #swagger.tags=["Users"] */
   users.findAll);
+
 router.get('/users/:user_id',
   /* #swagger.tags=["Users"] */
   /* #swagger.parameters['user_id'] = { description: 'ID of the user to retrieve', type: 'string' } */
   users.findOne);
+
 router.post('/users', 
   /* #swagger.tags=["Users"] */
   /* #swagger.parameters['user'] = {
@@ -140,14 +142,15 @@ router.post('/users',
       schema: {
           $firstName: 'Enter First Name',
           $lastName: 'Enter Last Name',
-          $birthday: 1999-99-99,
+          $birthday: '1999-01-01',
           $email: 'Enter Email',
-          $password: 'Enter the year of piblication',
+          $password: 'Enter Password',
           $role: '"user" or "admin"',
-          $phoneNumber: 0000000000
+          $phoneNumber: '+1234567890'
       }
   } */
   users.create);
+
 router.put('/users/:user_id', 
   /* #swagger.tags=["Users"] */
   /* #swagger.parameters['user_id'] = {
@@ -161,19 +164,20 @@ router.put('/users/:user_id',
       description: 'User object to be updated',
       required: true,
       schema: {
-          $firstName: 'Enter First Name',
-          $lastName: 'Enter Last Name',
-          $birthday: 1999-99-99,
-          $email: 'Enter Email',
-          $password: 'Enter the year of piblication',
+          $firstName: 'Updated First Name',
+          $lastName: 'Updated Last Name',
+          $birthday: '1999-01-01',
+          $email: 'Updated Email',
+          $password: 'Updated Password',
           $role: '"user" or "admin"',
-          $phoneNumber: 0000000000
+          $phoneNumber: '+1234567890'
       }
   } */
   users.updateUser);
+
 router.delete('/users/:user_id', 
   /* #swagger.tags=["Users"] */
-  /* #swagger.parameters['user_id'] = { description: 'ID of the book to delete', type: 'string' } */
+  /* #swagger.parameters['user_id'] = { description: 'ID of the user to delete', type: 'string' } */
   users.deleteUser);
 
 // Loan Routes
@@ -193,11 +197,11 @@ router.post('/loans',
       description: 'Loan object to be created',
       required: true,
       schema: {
-          $user_id: 'Enter First Name',
-          $book_id: 'Enter Last Name',
-          $loanDate: 1999-99-99,
-          $dueDate: 1999-99-99,
-          $returnDate: 1999-99-99,
+          $user_id: 'Enter User ID',
+          $book_id: 'Enter Book ID',
+          $loanDate: '2023-01-01',
+          $dueDate: '2023-02-01',
+          $returnDate: '2023-03-01',
           $status: '"active", "overdue", or "returned"',
       }
   } */
@@ -213,25 +217,22 @@ router.put('/loans/:loan_id',
   } */
   /* #swagger.parameters['loan_data'] = { 
       in: 'body',
-      description: 'User object to be updated',
+      description: 'Loan object to be updated',
       required: true,
       schema: {
-          $user_id: 'Enter user_id',
-          $book_id: 'Enter book_id',
-          $loanDate: 1999-99-99,
-          $dueDate: 1999-99-99,
-          $returnDate: 1999-99-99,
+          $user_id: 'Updated User ID',
+          $book_id: 'Updated Book ID',
+          $loanDate: '2023-01-01',
+          $dueDate: '2023-02-01',
+          $returnDate: '2023-03-01',
           $status: '"active", "overdue", or "returned"',
       }
   } */
- loans.updateLoan
-);
+  loans.updateLoan);
 
 router.delete('/loans/:loan_id',
   /* #swagger.tags=["Loans"] */
   /* #swagger.parameters['loan_id'] = { description: 'ID of the loan to delete', type: 'string' } */
-  loans.deleteLoan
-);
-
+  loans.deleteLoan);
 
 module.exports = router;
